<?xml version="1.0" encoding="utf-8"?>

<ScrollView   xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--Background Image (Moved to ScrollView Background)  -->
       <!-- <ImageView
            android:rotationY="@integer/locale_mirror_flip"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/three" /> -->

        <!-- logo image -->
        <ImageView
            android:id="@+id/logo"
            android:layout_width="188dp"
            android:layout_height="96dp"
            android:layout_marginTop="16dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/header3" />

        <!-- edit text and button container -->
        <RelativeLayout
            android:id="@+id/editText_and_button_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/logo"
            android:orientation="vertical">
            <EditText
                android:id="@+id/weight_edit_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_centerHorizontal="true"
                android:hint="@string/enter_weight"
                android:inputType="numberDecimal"
                android:layout_marginTop="16dp"/>


            <EditText
                android:id="@+id/height_edit_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_centerHorizontal="true"
                android:hint="@string/enter_height"
                android:inputType="numberDecimal"
                android:layout_below="@id/weight_edit_box" />

            <Button
                android:id="@+id/calculateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/height_edit_box"
                android:layout_marginTop="16dp"
                android:text="@string/calculate_button"
                android:onClick="calculateBMI"
                />

        </RelativeLayout>

        <!--BMI definition container -->
        <RelativeLayout
            android:id="@+id/container_for_introduction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText_and_button_container"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="72dp"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageView
                android:id="@+id/introduction1_image"
                android:src="@drawable/ic_assignment_turned_in_black_24dp"
                android:layout_width="24dp"
                android:layout_height="24dp" />

            <TextView
                android:id="@+id/introduction_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/introduction1_image"
                android:text="@string/bmi_introduction"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/introduction2_image"
                android:src="@drawable/ic_assignment_turned_in_black_24dp"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_below="@id/introduction_textView"
                android:layout_marginTop="32dp"
                />
            <TextView
                android:id="@+id/introduction2_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/introduction2_image"
                android:layout_below="@id/introduction_textView"
                android:text="@string/calculator_not_for_Children"
                android:layout_marginTop="32dp"
                android:textSize="12sp" />


        </RelativeLayout>

        <!--BMI results container  -->
        <LinearLayout
            android:id="@+id/list_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="85dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:visibility="gone"
            android:layout_below="@id/editText_and_button_container"
            android:background="@drawable/background_border">

            <!-- image result container -->
            <LinearLayout
                android:id="@+id/container_mbi_result"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <ImageView
                    android:id="@+id/bmi_result_image"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="79dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="16dp"/>

                <TextView
                    android:id="@+id/result_status"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" "
                    android:layout_below="@id/bmi_result_image"
                    android:textSize="16dp"/>

                <TextView
                    android:id="@+id/bmi_result"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:text=" "
                    android:layout_below="@id/result_status"
                    android:textSize="16dp"/>

            </LinearLayout>


            <RelativeLayout
                android:id="@+id/list_information2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                >
                <TextView
                    android:id="@+id/weight_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="8dp"
                    android:text="@string/weight_textView"/>
                <TextView
                    android:id="@+id/weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/weight_textView"
                    android:text="65"/>
                <TextView
                    android:id="@+id/height_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="8dp"
                    android:layout_below="@id/weight_textView"
                    android:text="@string/height_textView"/>
                <TextView
                    android:id="@+id/height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/weight_textView"
                    android:layout_toEndOf="@id/height_textView"
                    android:text="160"/>
                <TextView
                    android:id="@+id/bmi_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="8dp"
                    android:layout_below="@id/height_textView"
                    android:text="@string/bmi_textView"/>
                <TextView
                    android:id="@+id/bmi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/height_textView"
                    android:layout_toEndOf="@id/bmi_textView"
                    android:text="160"/>
                <TextView
                    android:id="@+id/result_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:layout_below="@id/bmi_textView"
                    android:text="@string/result_textViwe"/>
                <TextView
                    android:id="@+id/result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/bmi_textView"
                    android:layout_toEndOf="@id/result_textView"
                    android:text="normal"/>




            </RelativeLayout>




        </LinearLayout>

        <!--Ideal weight conclusion container -->
        <RelativeLayout
            android:id="@+id/ideal_weight_conclusion_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/list_information"
            android:layout_marginStart="85dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/ideal_weight_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/ideal_weight_for_you"/>


            <ImageView
                style="@style/ideal_weight_imageView"
                android:id="@+id/ideal_weight_imageView1"
                android:layout_below="@id/ideal_weight_textView" />
            <TextView
                style="@style/ideal_weight_textView"
                android:id="@+id/ideal_weight_textView1"
                android:layout_below="@id/ideal_weight_textView"
                android:layout_toEndOf="@id/ideal_weight_imageView1"
                android:text="@string/ideal_weight1"/>


            <ImageView
                style="@style/ideal_weight_imageView"
                android:id="@+id/ideal_weight_imageView2"
                android:layout_below="@id/ideal_weight_textView1" />
            <TextView
                style="@style/ideal_weight_textView"
                android:id="@+id/ideal_weight_textView2"
                android:layout_below="@id/ideal_weight_textView1"
                android:layout_toEndOf="@id/ideal_weight_imageView1"
                android:text="@string/ideal_weight_lose"/>


            <ImageView
                style="@style/ideal_weight_imageView"
                android:id="@+id/ideal_weight_imageView3"
                android:layout_below="@id/ideal_weight_textView2" />
            <TextView
                style="@style/ideal_weight_textView"
                android:id="@+id/ideal_weight_textView3"
                android:layout_below="@id/ideal_weight_textView2"
                android:layout_toEndOf="@id/ideal_weight_imageView2"
                android:text="@string/ideal_weight3"/>


            <ImageView
                style="@style/ideal_weight_imageView"
                android:src="@drawable/ic_wb_sunny_black_24dp"
                android:id="@+id/ideal_weight_imageView4"
                android:layout_below="@id/ideal_weight_textView3"
                android:layout_marginTop="16dp"/>

            <TextView
                style="@style/ideal_weight_advice"
                android:id="@+id/ideal_weight_advice"
                android:layout_below="@id/ideal_weight_textView3"
                android:layout_toEndOf="@+id/ideal_weight_imageView4"
                android:text=""/>






        </RelativeLayout>


    </RelativeLayout>

</ScrollView>








